<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vinicius.firebaseteste.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_user"
        android:textSize="@dimen/text_view_font_size"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_marginTop="@dimen/margin_top">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_text_text_size"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:layout_marginTop="@dimen/margin_top">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_text_text_size"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progressbar_custom"
            android:layout_centerInParent="true"
            android:visibility="invisible"/>


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/BlueButtonLightTheme"
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:enabled="false"
            android:text="@string/register"
            android:textColor="@drawable/button_text_selector"
            android:textAllCaps="false"
            android:elevation="@dimen/rest_button"
            android:stateListAnimator="@animator/button_translation_z"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="@dimen/text_view_font_size"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@color/colorPrimary"/>

    <RelativeLayout
        android:id="@+id/loggedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:visibility="gone">

        <TextView
            android:id="@+id/loggedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logged"
            android:layout_marginRight="@dimen/margin_top"/>

        <TextView
            android:id="@+id/loggedEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/loggedTextView"/>

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_below="@id/loggedTextView"
            android:layout_centerHorizontal="true"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:theme="@style/BlueButtonLightTheme"
            android:id="@+id/realTimeDatabaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/logoutButton"
            android:text="@string/database"
            android:textColor="@drawable/button_text_selector"
            android:textAllCaps="false"
            android:elevation="@dimen/rest_button"
            android:stateListAnimator="@animator/button_translation_z"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapperSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:layout_marginTop="@dimen/margin_top">

            <EditText
                android:id="@+id/emailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_text_text_size"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapperSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_marginTop="@dimen/margin_top">

            <EditText
                android:id="@+id/passwordSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/edit_text_text_size"/>

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ProgressBar
                android:id="@+id/progressBarSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/progressbar_custom"
                android:layout_centerInParent="true"
                android:visibility="invisible"/>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:theme="@style/BlueButtonLightTheme"
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:text="@string/signin"
                android:textColor="@drawable/button_text_selector"
                android:textAllCaps="false"
                android:elevation="@dimen/rest_button"
                android:stateListAnimator="@animator/button_translation_z"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
